kubernetes/apps/paperless/paperless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  selector:
    app: paperless
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: web-ui
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  serviceName: paperless
  replicas: 1
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
      - name: paperless
        image: ghcr.io/paperless-ngx/paperless-ngx
        ports:
          - containerPort: 8000
            name: web-ui
            protocol: TCP
        volumeMounts:
          - name: data
            mountPath: /usr/src/paperless/data
            subPath: data
          - name: data
            mountPath: /usr/src/paperless/media
            subPath: media
          - name: data
            mountPath: /usr/src/paperless/export
            subPath: export
          - name: data
            mountPath: /usr/src/paperless/consume
            subPath: consume
  volumeClaimTemplates:
  - metadata:
      name: data
      namespace: paperless
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: longhorn
      resources:
        requests:
          storage: 8Gi
