kubernetes/apps/paperless/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-http
  labels:
    app: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-to-https@kubernetescrd"
spec:
  rules:
    - host: paperless.internal.paulfriedrich.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-https
  labels:
    app: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: paperless.internal.paulfriedrich.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  name: http
  tls:
    - hosts:
        - paperless.internal.paulfriedrich.me
